<resources>
    <string name="app_name">StcChallenge</string>
    <string name="bio_guide_id">Bio Guide Id</string>
    <string name="title_address">Address:</string>
    <string name="title_name">Name:</string>
    <string name="title_birthday">Birthday:</string>
    <string name="title_end_date">EndDate:</string>
    <string name="title_gender">Gender:</string>
    <string name="title_sort_name">SortName:</string>
    <string name="title_website">Website:</string>
    <string name="title_phone">Phone</string>
    <string name="team">team</string>
</resources>