<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="senator"
            type="com.example.stcchallenge.models.Senator" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragments.SenatorDetailsFragment">

            <include
                android:id="@+id/cell_senator_details"
                layout="@layout/cell_senator_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:senator="@{senator}" />

            <com.example.stcchallenge.views.InformationView
                android:id="@+id/address_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cell_senator_details"
                app:text="@{senator.addressComplete}"
                app:text_color="@color/light_text_color"
                app:title="@string/title_address"
                app:title_color="@color/text_color" />


            <com.example.stcchallenge.views.InformationView
                android:id="@+id/office_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_view"
                app:text="@{senator.enteredOffice}"
                app:text_color="@color/light_text_color"
                app:title="office:"
                app:title_color="@color/text_color" />

            <com.example.stcchallenge.views.InformationView
                android:id="@+id/name_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/office_view"
                app:text="@{senator.name}"
                app:text_color="@color/light_text_color"
                app:title="@string/title_name"
                app:title_color="@color/text_color" />

            <com.example.stcchallenge.views.InformationView
                android:id="@+id/birthday_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_view"
                app:text="@{senator.dateOfBirth}"
                app:text_color="@color/light_text_color"
                app:title="@string/title_birthday"
                app:title_color="@color/text_color" />

            <com.example.stcchallenge.views.InformationView
                android:id="@+id/end_date_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthday_view"
                app:text="@{senator.termEnd}"
                app:text_color="@color/light_text_color"
                app:title="@string/title_end_date"
                app:title_color="@color/text_color" />


            <com.example.stcchallenge.views.InformationView
                android:id="@+id/gender_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/end_date_view"
                app:text="@{senator.gender}"
                app:text_color="@color/light_text_color"
                app:title="@string/title_gender"
                app:title_color="@color/text_color" />


            <com.example.stcchallenge.views.InformationView
                android:id="@+id/sort_name_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender_view"
                app:text="@{senator.nameSlug}"
                app:text_color="@color/light_text_color"
                app:title="@string/title_sort_name"
                app:title_color="@color/text_color" />

            <com.example.stcchallenge.views.InformationView
                android:id="@+id/website_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sort_name_view"
                app:text="@{senator.website}"
                app:text_color="@color/light_text_color"
                app:title="@string/title_website"
                app:title_color="@color/text_color" />

            <com.example.stcchallenge.views.InformationView
                android:id="@+id/phone_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/website_view"
                app:text="@{senator.website}"
                app:text_color="@color/light_text_color"
                app:title="@string/title_phone"
                app:title_color="@color/text_color" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/icons_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_view">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv1"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/ic_guest"
                    app:layout_constraintEnd_toStartOf="@+id/iv3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv2"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/ic_guest"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv3"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/ic_guest"
                    app:layout_constraintEnd_toStartOf="@+id/iv2"
                    app:layout_constraintStart_toEndOf="@+id/iv1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
